--- a/views/cat.erb
+++ b/views/cat.erb
@@ -1,3 +1,4 @@
+  <h1>My name is <%= ["Vince","Graeme","Alistair"].sample %></h1>
   <div style='border: 3px dashed red'>
   <img width='800px' src='https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/article_thumbnails/other/cat_relaxing_on_patio_other/1800x1200_cat_relaxing_on_patio_other.jpg' alt='cat image'>
   </div>
